# motor_driver_new

./: CMakeLists.txt  README  README.md
inc/: CanBase.h  DamiaoMotor.h  FeetechMotor.h  NimotionMotor.h  SMS_STS_THREAD.h  UsbCanBus.h  controlcan.h  ctrl_motor_interface.h  motor_error_code.h
lib/: usbcan.rules
src/: CanBase.cpp  DamiaoMotor.cpp  FeetechMotor.cpp  NimotionMotor.cpp  SMS_STS_THREAD.cpp  UsbCanBus.cpp
test/: Makefile  build.sh  disable.cpp  disable.elf  goHome.cpp  line.elf  linearInterpolation.cpp  plot.py  plot2.py  setHome.cpp  setHome.elf  stepLine.elf  stepLinerInter.cpp  velPlot.py
